--- a/index.html
+++ b/index.html
@@ -282,7 +282,8 @@
           <div class="logo"><a href="#">
               <img src="profile3.jpeg" alt="">
             </a></div>
-       
+          <p>I am a coder passionate about web technologies and committed to enhancing my skills. 
+            I aim to develop professional-grade projects and believe in my potential to achieve great results.</p>       
         </div>
         <div class="col-2">
           <h2 class="column-heading">Important<br>Links</h2>
